# ComputerClub

./: CMakeLists.txt  README.md
include/: client.h  computer_club.h  events.h  input_parser.h  input_validator.h  mytime.h  table.h  time.h
src/: client.cpp  computer_club.cpp  events.cpp  input_parser.cpp  input_validator.cpp  main.cpp  table.cpp  time.cpp
test/: format_tests.cpp  logic_tests.cpp
